outputs/dev/develop-3.out
$ spack install
==> Installing environment /home/spack/devel-env
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/pkgconf-1.7.3-4sh6pymrm2ms4auu3ajbjjr6fiuhz5g7
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/berkeley-db-18.1.40-4ihuiazsglf22f3pntq5hc4kyszqzexn
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/zlib-1.2.11-smoyzzo2qhzpn6mg6rd3l2p7b23enshg
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/libsigsegv-2.12-lbrx7lnfz46ukewxbhxnucmx76g23c6q
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/util-macros-1.19.1-gs6ag7ktdoiirb62t7bcagjw62szrrg2
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/libiconv-1.16-jearpk4xci4zc7dkrza4fufaqfkq7rfl
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/xz-5.2.5-komekkmyciga3kl24edjmredhj3uyt7v
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/libyogrt-1.24-ld352tmlkqdjwucj2u5g4fktj2ab2xte
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/pdsh-2.31-pv3zp64j5luhresoommun73mk5joqpb5
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/ncurses-6.2-crhlefo3dv7lmsv5pf4icsy4gepkdorm
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/m4-1.4.18-mkc3u4x2p2wie6jfhuku7g5rkovcrxps
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/libxml2-2.9.10-yn2r3wfhiilelyulh5toteicdtxjhw7d
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/readline-8.0-t54jzdy2jj4snltjazlm3br2urcilc6v
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/libtool-2.4.6-jdxbjftheiotj6solpomva7dowrhlerl
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/gdbm-1.18.1-4av4gywgpaspkhy3dvbb62nulqogtzbb
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/libpciaccess-0.16-bob4o5m3uku6vtdil5imasprgy775zg7
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/perl-5.32.0-zfdvt2jjuaees43ffrrtphqs2ky3o22t
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/openssl-1.1.1h-es377uqsqougfc67jyg7yfjyyuukin52
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/autoconf-2.69-mm33a3ocsv3jsh2tfxc4mlab4xsurtdd
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/cmake-3.18.4-bltycqwh5oofai4f6o42q4uuj4w5zb3j
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/automake-1.16.2-d2krmb5gweivlnztcymhklzsqbrpatt6
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/json-cwx-0.12-7tkgwjvu2mi4ea2wsdetunq7g4k4r2nh
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/numactl-2.0.14-wbqbc5vw5sxzwhvu56p6x5nd5n4abrvh
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/hwloc-1.11.11-zqwfzhw5k2ollygh6nrjpsi7u4d4g6lu
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/openmpi-3.1.6-pmsyupw6w3gql4loaor25gfumlmvkl25
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/lwgrp-1.0.3-tzf27ncg7jccpnayixks4hlam3wpv4wy
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/hdf5-1.10.7-vedchc5aoqyu3ydbp346qrbpe6kg46rq
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/dtcmp-1.1.1-fxiami4ydeszdv55txp4zfin3kzfvpc7
[+] /home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/silo-4.10.2-vfrf7asfclt7epufnoxibfqbkntbk5k3
==> Installing scr-2.0.0-jlvvs27eu2jsvzeobu22z6skocq3fmte
==> No binary for scr-2.0.0-jlvvs27eu2jsvzeobu22z6skocq3fmte found: installing from source
==> scr: Executing phase: 'cmake'
==> scr: Executing phase: 'build'
==> Error: ProcessError: Command exited with status 2:
    'make' '-j4'

4 errors found in build log:
     178    make[2]: Entering directory '/home/spack/devel-env/scr/spack-build-jlvvs27'
     179    cd /home/spack/devel-env/scr/spack-build-jlvvs27 && /home/spack/spack/opt/spack/linux-ubunt
	    u18.04-x86_64/gcc-7.5.0/cmake-3.18.4-bltycqwh5oofai4f6o42q4uuj4w5zb3j/bin/cmake -E cmake_de
	    pends "Unix Makefiles" /home/spack/devel-env/scr /home/spack/devel-env/scr/src /home/spack/
	    devel-env/scr/spack-build-jlvvs27 /home/spack/devel-env/scr/spack-build-jlvvs27/src /home/s
	    pack/devel-env/scr/spack-build-jlvvs27/src/CMakeFiles/scr_have_restart.dir/DependInfo.cmake
	     --color=
     180    make[2]: Entering directory '/home/spack/devel-env/scr/spack-build-jlvvs27'
     181    cd /home/spack/devel-env/scr/spack-build-jlvvs27 && /home/spack/spack/opt/spack/linux-ubunt
	    u18.04-x86_64/gcc-7.5.0/cmake-3.18.4-bltycqwh5oofai4f6o42q4uuj4w5zb3j/bin/cmake -E cmake_de
	    pends "Unix Makefiles" /home/spack/devel-env/scr /home/spack/devel-env/scr/examples /home/s
	    pack/devel-env/scr/spack-build-jlvvs27 /home/spack/devel-env/scr/spack-build-jlvvs27/exampl
	    es /home/spack/devel-env/scr/spack-build-jlvvs27/examples/CMakeFiles/test_api_multiple.dir/
	    DependInfo.cmake --color=
     182    make[2]: Entering directory '/home/spack/devel-env/scr/spack-build-jlvvs27'
     183    cd /home/spack/devel-env/scr/spack-build-jlvvs27 && /home/spack/spack/opt/spack/linux-ubunt
	    u18.04-x86_64/gcc-7.5.0/cmake-3.18.4-bltycqwh5oofai4f6o42q4uuj4w5zb3j/bin/cmake -E cmake_de
	    pends "Unix Makefiles" /home/spack/devel-env/scr /home/spack/devel-env/scr/examples /home/s
	    pack/devel-env/scr/spack-build-jlvvs27 /home/spack/devel-env/scr/spack-build-jlvvs27/exampl
	    es /home/spack/devel-env/scr/spack-build-jlvvs27/examples/CMakeFiles/test_api.dir/DependInf
	    o.cmake --color=
  >> 184    /home/spack/devel-env/scr/src/scr_copy.c:44:1: error: expected ',' or ';' before 'int'
     185     int print_usage()
     186     ^~~
     187    make[2]: Leaving directory '/home/spack/devel-env/scr/spack-build-jlvvs27'
     188    make  -f src/CMakeFiles/scr_have_restart.dir/build.make src/CMakeFiles/scr_have_restart.dir
	    /build
     189    make[2]: Leaving directory '/home/spack/devel-env/scr/spack-build-jlvvs27'
     190    make  -f examples/CMakeFiles/test_api_multiple.dir/build.make examples/CMakeFiles/test_api_
	    multiple.dir/build

     ...

     198    make[2]: Nothing to be done for 'src/CMakeFiles/scr_have_restart.dir/build'.
     199    make[2]: Leaving directory '/home/spack/devel-env/scr/spack-build-jlvvs27'
     200    make[2]: Leaving directory '/home/spack/devel-env/scr/spack-build-jlvvs27'
     201    make[2]: Leaving directory '/home/spack/devel-env/scr/spack-build-jlvvs27'
     202    make  -f examples/CMakeFiles/test_api.dir/build.make examples/CMakeFiles/test_api.dir/build
     203    src/CMakeFiles/scr_copy.dir/build.make:84: recipe for target 'src/CMakeFiles/scr_copy.dir/s
	    cr_copy.c.o' failed
  >> 204    make[2]: *** [src/CMakeFiles/scr_copy.dir/scr_copy.c.o] Error 1
     205    make[2]: Leaving directory '/home/spack/devel-env/scr/spack-build-jlvvs27'
     206    CMakeFiles/Makefile2:1206: recipe for target 'src/CMakeFiles/scr_copy.dir/all' failed
  >> 207    make[1]: *** [src/CMakeFiles/scr_copy.dir/all] Error 2
     208    make[1]: *** Waiting for unfinished jobs....
     209    [ 85%] Built target scr_have_restart
     210    [ 88%] Built target test_api_multiple
     211    make[2]: Entering directory '/home/spack/devel-env/scr/spack-build-jlvvs27'
     212    make[2]: Nothing to be done for 'examples/CMakeFiles/test_api.dir/build'.
     213    make[2]: Leaving directory '/home/spack/devel-env/scr/spack-build-jlvvs27'
     214    [ 91%] Built target test_api
     215    make[1]: Leaving directory '/home/spack/devel-env/scr/spack-build-jlvvs27'
     216    Makefile:162: recipe for target 'all' failed
  >> 217    make: *** [all] Error 2

See build log for details:
  /home/spack/devel-env/scr/spack-build-out.txt

==> Warning: Skipping build of macsio-1.1-6x6pqmrjajd57kbzgtwgdz3rpozuwzex since scr-2.0.0-jlvvs27eu2jsvzeobu22z6skocq3fmte failed
==> Error: Failed to install scr due to RuntimeError: the transactional move of "/home/spack/spack/opt/spack/linux-ubuntu18.04-x86_64/gcc-7.5.0/scr-2.0.0-jlvvs27eu2jsvzeobu22z6skocq3fmte" failed.
    ProcessError: Command exited with status 2:
    'make' '-j4'
==> Updating view at /home/spack/devel-env/.spack-env/view
==> Updating view at /home/spack/devel-env/.spack-env/view
